# lattice

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRD.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
benchmarks/: results.json  run_benchmarks.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  benchmark-results.txt  linkedin-post.md  one-pager-v2.html  one-pager.html  siwik-onepager.html  test-results.txt  whitepaper.html  whitepaper.md
docs/paper/: lattice-paper.aux  lattice-paper.out  lattice-paper.tex
examples/: basic_usage.py  nvidia_multi_model_demo.py  osint_investigation.py
lattice/: __init__.py  adapters.py  agent.py  cli.py  dag.py  dashboard.py  evidence.py  exceptions.py  models.py  monitor.py  revocation.py  store.py  tracker.py
tests/: conftest.py  test_cli.py  test_dag.py  test_dashboard.py  test_effective_confidence.py  test_models.py  test_monitor.py  test_revocation.py  test_store.py  test_tracker.py
