[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice-core"
version = "1.2.1"
description = "Accountability layer for multi-agent AI systems — content-addressed, cryptographically signed claim DAGs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ali Murtaza Bhutto", email = "alimurtazabhutto@proton.me"},
]
keywords = ["osint", "multi-agent", "provenance", "accountability", "dag", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "cryptography>=41.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
dev = [
    "pytest>=7.0",
    "httpx>=0.24.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.scripts]
lattice = "lattice.cli:cli"

[project.urls]
Homepage = "https://github.com/thunderstornX/lattice"
Repository = "https://github.com/thunderstornX/lattice"
Issues = "https://github.com/thunderstornX/lattice/issues"

[tool.setuptools.packages.find]
include = ["lattice*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100
